--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <properties>
     <java.version>17</java.version>
     <testcontainers.version>1.19.1</testcontainers.version>
-    <ontology.version>2.1.27</ontology.version>
+    <ontology.version>2.2.2-synthea</ontology.version>
   </properties>
 
   <dependencies>
@@ -201,7 +201,7 @@
               <goal>wget</goal>
             </goals>
             <configuration>
-              <url>https://github.com/medizininformatik-initiative/fhir-ontology-generator/raw/v${ontology.version}/example/mii_core_data_set/ontology/mapping.zip</url>
+              <url>https://github.com/medizininformatik-initiative/fhir-ontology-generator/raw/v${ontology.version}/example/synthea_data_set/ontology/mapping.zip</url>
               <outputFileName>mapping.zip</outputFileName>
               <outputDirectory>ontology/</outputDirectory>
             </configuration>
